--- a/rro_overlays/FrameworksResOverlayVeux/res/values/dimens.xml
+++ b/rro_overlays/FrameworksResOverlayVeux/res/values/dimens.xml
@@ -23,5 +23,6 @@
     <dimen name="status_bar_height_default">28dp</dimen>
     <dimen name="status_bar_height_landscape">28dp</dimen>
     <dimen name="status_bar_height_portrait">94px</dimen>
+    <dimen name="quick_qs_offset_height">48dp</dimen>
     
 </resources>
